examples/test/testpolicy9397.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9397
  namespace: namespace56
spec:
  podSelector:
    matchLabels:
      key20: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value3
          key44: value9
          key41: value31
      podSelector:
        matchLabels:
          key21: value39
          key6: value43
